less/gallery.less
// main: "./main.less"

#front {
	position: fixed;
	height: 100vh;
	width: 100vw;
	top: 0;
	left: 0;
	background: black;
	z-index: 25;
	overflow-y: scroll;
	transition: opacity 500ms;
	user-select: none;

	&.hidden {
		display: none;
	}

	.quit {
		position: fixed;
		top: 18px;
		right: 18px;
		opacity: 0.5;
		background: black;

		&:hover {
			opacity: 0.95;
		}
	}

	.nav-arrow#gallery-prev {
		top: calc(50vh - 60px / 2);
		left: 1px;
	}
	.nav-arrow#gallery-next {
		top: calc(50vh - 60px / 2);
		right: 18px;
	}
	.nav-arrow {
		opacity: 0.5;
		width: 60px;
		height: 60px;
		position: fixed;
		cursor: pointer;
		background: rgba(0, 0, 0, 0.8);
		@media (max-width: 550px) { visibility: hidden; }

		&:hover {
			opacity: 0.95;
		}

		.bar {
			background: white;
			border-radius: 1px;
			width: 25px;
			height: 4px;
			position: absolute;
			left: 17px;
			transition: transform 200ms, height 200ms, left 150ms;
		}

		&#gallery-prev {
			.bar {
				left: 17px;
			}
			.bar-top {
				transform-origin: 0 0;
				top: 29px;
				transform: rotate(-45deg);
			}
			.bar-bot {
				transform-origin: 0 4px;
				transform: rotate(45deg);
				top: 25px;
			}
		}
		
		&#gallery-next {
			.bar {
				left: 24px;
			}
			.bar-top {
				transform-origin: 0 0;
				top: 12px;
				transform: rotate(45deg);
			}
			.bar-bot {
				transform-origin: 0 4px;
				transform: rotate(-45deg);
				top: 44px;
			}
		}
	}
	
	#front-artwork {
		box-shadow: rgba(0, 0, 0, 0.5) 0 0 30px;
		padding-bottom: 5rem;
		
		img.fullone {
			// width and height handled in gallery.js
			border: solid 1px rgba(125, 125, 125, 0.5);
			
			&.invisible {
				visibility: hidden;
			}

		}

		.details {
			text-align: center;
			padding: 0 40px;

			.description {
				p, h3 {
					color: @blue-90;
				}
				h3.title {
					font-size: 1.5em;
					padding: 25px 0 1rem;
					font-weight: 400;
				}
				p.text {
					font-size: 1em;
					font-weight: 200;
				}
				span {
					font-weight: 400;
				}
			}
		}
	}

}
#purchase-info {
	border-top: solid 1px rgba(255, 255, 255, 0.5);
	margin-top: 8rem;
	width: 80%;
	@media (max-width: 550px) { width: inherit; padding: 0 2em; }

	h4, p {
		text-align: center;
	}
	h4 {
		padding: 2rem 0 1rem;
		font-size: 1.3rem;
	}
	p {
		@media (max-width: 450px) { text-align: justify; }
		font-weight: 200;
	}
	strong {
		font-weight: 400;
	}
}

#artworks-container {
	position: relative;
	min-height: 40vh;
}
#artworks-loader.loader {
	top: 15vh;
	bottom: unset;
}
#artworks-loader.hidden {
	display: none;
}
#artworks.hidden {
	visibility: hidden;
}

.artwork {
	// Handled by Masonry methods in gallery.js

	width: calc(25% - 2 * 5px - 2px);
	@media (max-width: 1150px) { width: calc(33% - 2 * 5px - 2px); }
	@media (max-width: 850px) { width: calc(50% - 2 * 5px - 2px); }
	@media (max-width: 450px) { width: 100%; max-width: 450px; }

	* {
		cursor: pointer;
	}
	h4.title {
		color: white;
		width: 100%;
		font-size: 1.2rem;
		padding: .7em 0;
		background: rgba(0,0,0,0.75);
		position: absolute;
		top: 0;
		left: 0;
		opacity: 0;
		transition: opacity 1s;
		.center();
	}
	img {
		width: 100%;
		outline: solid 1px rgba(100, 100, 100, 0.7);
		.img-placeholder();
	}

}

#gallery h3.categname {
	margin-bottom: 20px;

	&:not(:first-of-type) {
		margin-top: 60px;
	}
}
.art-container {
	padding: 20px;
	text-align: center;
	display: flex;
	flex-direction: column;
	align-items: center;

	@media (max-width: 1000px) {
		padding: 20px 10px;
	}
	@media (max-width: 500px) {
		padding: 20px 5px;
	}

	img {
		max-width: 950px;
		width: 100%;
		height: auto !important;
		min-height: 190px;
		margin-bottom: 20px;
		user-select: none;

		@media (max-width: 1000px) {
			width: 90%;
		}
		@media (max-width: 500px) {
			width: 100%;
		}
	}
}
#credits {
	text-align: center;
	margin-top: 100px;
	margin-bottom: 100px;
	padding: 0 5px;

	h3 {
		margin-bottom: 0;
		font-weight: 300;
		font-size: 2.5rem;

		& + p {
			margin-top: 0;
		}
	}
	p {
		margin: 0.5em 0;

		span {
			font-weight: 500;
		}
	}
	h4 {
		margin-top: 2.5rem;
		font-weight: 600;
	}
}

